k8s/base/library/namespace.yaml
#
# Nimbus
# K8s Deployment
# Library
#

apiVersion: v1
kind: Namespace
metadata:
  name: library
