k8s/base/library/deployment.yaml
#
# Nimbus
# Library Service
# Calibre Web Deployment
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre-web
spec:
  replicas: 1
  selector: {} # to be templated by kustomize
  template:
    spec:
      containers:
      - name: calibre-web
        image: lscr.io/linuxserver/calibre-web:latest
        volumeMounts:
          - mountPath: /config
            name: settings
          - mountPath: /books
            name: library
        ports:
          - containerPort: 8083
            name: http
      volumes:
        - name: settings
          persistentVolumeClaim:
            claimName: calibre-web-settings
        - name: library
          persistentVolumeClaim:
            claimName: library-data
