k8s/base/library/service.yaml
#
# Nimbus
# Library Service
# k8s Service
#

apiVersion: v1
kind: Service
metadata:
  name: calibre-web
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
